# sfdist

./: CMakeLists.txt  Makefile  README.txt  SFDist_mtz.cpp  SFDist_refl.cpp  defines.h  label.cpp  label.h  rcpp_SFDist_mtz.cpp  rcpp_sfdist.cpp  rsymop.h  rsymop_setup.h  sf.cpp  sf.h  sfdist.cpp  sfmtzin.cpp  sfmtzin.h  utils.cpp  utils.h
